# -FREA

./: .gitignore  README.md
frea_bringup/: CMakeLists.txt  README.md  package.xml
frea_bringup/launch/: frea.launch
frea_bringup/launch/components/: controllers.launch
frea_dart/: CMakeLists.txt  package.xml
frea_dart/config/: ros_controllers.yaml  simulation_parameters.yaml
frea_dart/include/frea_dart/: frea_simulation.hpp  pid.hpp  robot.hpp  robot_controller.hpp
frea_dart/include/frea_dart/plugins/: adjustable_weight.hpp  contact_sensor.hpp  dart_plugin.hpp  imu_sensor.hpp  plugin_manager.hpp
frea_dart/include/frea_dart/utilities/: load_param.hpp
frea_dart/launch/: frea_dart.launch
frea_dart/scripts/: spawn_robot
frea_dart/src/: frea_dart.cpp
frea_dart/src/frea_dart/: frea_simulation.cpp  pid.cpp  robot.cpp  robot_controller.cpp
frea_dart/src/frea_dart/plugins/: adjustable_weight.cpp  contact_sensor.cpp  imu_sensor.cpp  plugin_manager.cpp
frea_dart_msgs/: CMakeLists.txt  package.xml
frea_dart_msgs/srv/: GetBodyState.srv  GetRobotState.srv  SetRobotState.srv  SpawnRobot.srv
frea_description/: CMakeLists.txt  README.md  package.xml
frea_description/meshes/: end_link.stl  left_ear.stl  mid_link.stl  mouth.stl  physical properties.txt  right_ear.stl  wheel.stl
frea_description/robcogen/: frea.dtdsl  frea.kindsl
frea_description/urdf/: frea.urdf.xacro  frea_dart.urdf.xacro
frea_description/urdf/chassis/: chassis.urdf.xacro
frea_description/urdf/chassis/wheel/: wheel.urdf.xacro
frea_description/urdf/dart/: frea_dart.urdf.xacro
frea_description/urdf/head/: head.urdf.xacro
frea_description/urdf/head/ears/: left_ear.urdf.xacro  right_ear.urdf.xacro
frea_description/urdf/head/mouth/: mouth.urdf.xacro
frea_description/urdf/neck/: neck_end.urdf.xacro  neck_mid.urdf.xacro
frea_description/urdf/sensors/: frea_camera.urdf.xacro  imu.urdf.xacro
frea_gazebo/: CMakeLists.txt  README.md  package.xml
frea_gazebo/config/: .ros_controllers.yaml.swp  ros_controllers.yaml
frea_gazebo/launch/: frea_gazebo.launch
frea_gazebo/plugins/include/: adjustable_weight.hpp  contact_detector.hpp  load_param.hpp
frea_gazebo/plugins/src/: adjustable_weight.cpp  contact_detector.cpp
frea_hardware/: CMakeLists.txt  README.md  package.xml  setup.py
frea_hardware/arduino/frea_head/: frea_head.ino
frea_hardware/nodes/: frea_head
frea_hardware/python/src/frea_hardware/: exceptions.py  head_communication_protocol.py  head_communicator.py  service_handler.py
frea_motion_control/: CMakeLists.txt  README.md  package.xml  setup.py
frea_motion_control/include/frea_motion_control/: base_link_tf_calculator.hpp  frea.hpp
frea_motion_control/launch/: base_link_tf_calculator.launch
frea_motion_control/python/src/frea_motion_control/: training_rewards.py
frea_motion_control/scripts/: train_motion_controller
frea_motion_control/src/: base_link_tf_publisher.cpp  nlmpc.cpp
frea_motion_control/src/frea_motion_control/: base_link_tf_calculator.cpp
frea_msgs/: CMakeLists.txt  README.md  package.xml
frea_training_envs/: CMakeLists.txt  README.md  package.xml  setup.py
frea_training_envs/launch/: train_motion_controller.launch
frea_training_envs/python/src/frea_training_envs/: __init__.py  frea_env.py
frea_training_envs/python/src/frea_training_envs/robot_envs/: frea_env.py  frea_env_dart.py
frea_training_envs/python/src/frea_training_envs/sim_envs/: dart_connection.py  dart_env.py
frea_training_envs/python/src/frea_training_envs/task_envs/: __init__.py  motion_control.py  motion_control_dart.py
frea_training_envs/python/src/frea_training_envs/utilities/: motion_control_training_rewards.py
frea_training_envs/scripts/: train_motion_controller
frea_training_envs/worlds/: flat_plane.skel
