<?xml version="1.0"?>
<package format="2">
  <name>frea_bringup</name>
  <version>0.0.0</version>
  <description>The frea_bringup package</description>

  <maintainer email="nickhafner@rocketmail.com">Nick Hafner</maintainer>

  <author email="nickhafner@rocketmail.com">Nick Hafner</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>frea_description</exec_depend>
</package>
