<?xml version="1.0"?>
<package format="2">
  <name>frea_motion_control</name>
  <version>0.0.0</version>
  <description>The frea_motion_control package</description>

  <maintainer email="nickhafner@rocketmail.com">Nick Hafner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>control_toolbox</depend>

  <export>
    <python path="${prefix}/python/src"/>
  </export>
</package>
