<?xml version="1.0"?>
<package format="2">
  <name>frea_msgs</name>
  <version>0.0.0</version>
  <description>The frea_msgs package</description>

  <maintainer email="nickhafner@rocketmail.com">Nick Hafner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
</package>
