<?xml version="1.0"?>
<package format="2">
  <name>frea_training_envs</name>
  <version>0.0.0</version>
  <description>The frea_training_envs package</description>

  <maintainer email="nickhafner@rocketmail.com">Nick Hafner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>openai_ros</depend>
  <depend>rospy</depend>
</package>
